--- a/shorthair-admin/package.json
+++ b/shorthair-admin/package.json
@@ -13,6 +13,7 @@
   "author": "eminoda",
   "license": "MIT",
   "dependencies": {
+    "jsdom": "^13.2.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-compose": "^4.1.0",
@@ -20,6 +21,7 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
+    "cssom": "^0.3.6",
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2"
   }
